KLABPP, KMLC - Java17 Improvements
- instanceof
- don't use reserved work `record`